test_fixtures/number/leading_dot.lox
// ParserError: UnexpectedExpressionToken found Dot at l2c1
.123;
